# Luni_Cloud

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
ai/: .env.example  Dockerfile  config.py  emotion.py  emotion_select.py  orchestrator.py  persona.py  requirements.txt  server.py
ai/backends/: __init__.py  aimode.py  base.py  gemini.py  openai_compat.py
docs/: README.md  architecture.md
docs/guides/: API.md  DEPLOYMENT.md  SETUP.md  TESTING.md  (+2 more)
nginx/: nginx.conf
server/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  main.py
server/app/api/: deps.py
server/app/api/v1/: admin.py  auth.py  data.py  devices.py  firmware.py  interactions.py  logs.py  ota.py  push.py  router.py  stats.py  users.py
server/app/api/ws/: app_client.py  device.py
server/app/core/: exceptions.py  logging.py  security.py
server/app/db/: database.py  models.py
server/app/db/migrations/: env.py
server/app/db/migrations/versions/: 001_initial.py  002_widen_interaction_direction.py  003_push_tokens.py
server/app/schemas/: auth.py  data.py  device.py  interaction.py  log.py  user.py  ws_protocol.py
server/app/services/: ai.py  auth.py  calendar_service.py  device.py  firmware.py  interaction.py  log_db.py  log_service.py  push.py  sync_data.py  weather.py  ws_manager.py
server/app/tasks/: calendar_sync.py  log_cleanup.py  scheduler.py  usage_aggregate.py  weather_sync.py
server/tests/: conftest.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json  server.js
(+93 files in other folders)
