[project]
name = "luni-server"
version = "0.1.0"
description = "Luni Robot Cloud Server — FastAPI backend"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "W"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
